# gsd-test

./: .gitignore  AGENTS.md  CLAUDE.md  package.json  pyproject.toml  门诊诊鉴首页-(全栈).md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-data-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  01-data-foundation-01-SUMMARY.md  (+2 more)
docs/: data-field-mapping.md  data-source-inventory.md
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: main.tsx
scripts/: psql-lite.mjs  query-pg.mjs  run_dashboard_api.py  start_dev.sh
sql/migrations/: 001_phase1_foundation.sql  002_phase1_metrics.sql  003_phase3_department_distribution.sql  004_phase3_disease_insights.sql  005_phase4_realtime_evaluation.sql
sql/staging/: 001_phase1_source_contracts.sql
sql/tests/: dash_01_default_window.sql  dash_02_overview_cards.sql  data_01_mapping.sql  data_02_aggregates.sql  data_03_status_split.sql  dise_01_disease_insights.sql  dist_01_department_distribution.sql  eval_01_persistence_chain.sql  oper_01_problem_drilldown.sql  oper_02_case_export.sql  run-phase-01.sh
src/api/: fastapi_dashboard_smoke.py  http_dashboard_disease.py  http_dashboard_distribution.py  http_dashboard_drilldown.py  http_dashboard_export.py  http_dashboard_overview.py  http_dashboard_server.py  http_dashboard_trend.py  http_realtime_evaluation.py
src/api/analytics/: trend.py  (+7 more)
(+105 files in other folders)
